Added .DS_Store to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -274,4 +274,6 @@ gradle-app.setting
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+.DS_Store
+
 # End of https://www.toptal.com/developers/gitignore/api/kotlin,intellij,intellij+iml,intellij+all,gradle
